syntax = "proto3";
package portraits;

message Information {

	repeated Processor processors = 1;

	message Processor {
		
		oneof Extractor {
			ExtractImageFromImageArray extractImageFromImageArray = 1;
		}	
		message ExtractImageFromImageArray {
			string extractorName = 1;
		}
		
		oneof Loader {
			DownloadZipImageFile downloadZipImageFile = 2;			
		}
		message DownloadZipImageFile {
			string downloadURL = 1;
			string directoryName = 2;	
		}
	}
}