syntax = "proto3";
package persona;

message Persona {
	repeated DNA DNAs = 1;
	string physical = 2;
	Age age = 3;
	
	message DNA {
		string DNA = 1;
		repeated Layer layers = 3;
		repeated Connection connections = 5;
		

		message Layer {
			string layerName = 1;
			repeated Size layerSize = 2;
			repeated Connection connections = 3;
			
			oneof SubLayer {
				LayerConvolution layerConvolution = 6;
				LayerActivation layerActivation = 7;
				LayerDropout layerDropout = 8;
			}		
		}
		
		message LayerConvolution {
			uint64 convolutionDimension = 1;
			uint64 filters = 2;
			repeated uint64 kernelSize = 3;
			string borderMode = 4;
			repeated uint64 inputShape = 5;
		}
		
		message LayerActivation {
			string activationType = 1;
		}

		message LayerDropout {
			double dropPercentage = 1;
		}
		
		
		message Connection {
			string sourceLayerName = 1;
			string destinationLayerName = 2;
		}
		
		message Size {
			uint64 dimension = 1;
			uint64 dimensionSize = 2;
		}			
	}

	message Age {
		uint64 old = 1;
		uint64 learningCycle = 2;
		uint64 learningBatchSize = 3;
		repeated Environment environments = 4; 
	}

	message Environment {
		string society = 1;
		Library library = 2;
		
		message Library {
		
			message Source {
				string sourceName = 1;
				repeated SourceConnectionLayer sourceConnectionLayers = 2;
				
				message SourceConnectionLayer {
					float teachingDataPercentage = 3;
					float validationDataPercentage = 4;
					float testDataPercentage = 5;				
					string connectedLayerName = 6;

					oneof SourceParameter {
						ImageSource imageSource = 1;
					}
					
					message ImageSource {
						uint64 imageWidth = 1;
						uint64 imageHeight = 2;
						repeated string imageProcess = 3;
					}				
				}
			}
			
			repeated Source sources = 1;
		}
	}		
}